제목,내용useState만듬

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.card-main{
+.card-title{
   width: 250px;
   font-size: 20px;
   font-weight: bold;
