--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,12 @@
   font-size: 20px;
   font-weight: bold;
 }
+.card-list{
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 .cards{
   width: 250px;
   height: 150px;
